[package]
name = "rust-metronome"
version = "0.1.0"
authors = ["Dominik Zapf <zapfdk@posteo.de"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
rodio = "0.11.0"